--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,5 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/python,flask,visualstudiocode
+
+apps/detector/model.pt
